--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 var map = new google.maps.Map(document.getElementById('map'), {
                 center: EDC320,
                 zoom: 18,
+                scrollwheel: false,
                 styles:[
                 {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
                 {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
@@ -236,6 +237,8 @@
                 }
                 ]
         });
+
+
                 // Try HTML5 geolocation.
                 var contentString = '<div id="content">'+
                   '<div id="siteNotice">'+
